--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "cross-env": "^5.1",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
+        "jquery-easy-loading": "^1.3.0",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
